--- a/pj_style.css
+++ b/pj_style.css
@@ -1,12 +1,11 @@
-
 body {
     font-family: Arial, sans-serif;
-    direction: rtl; 
+    direction: rtl;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
 }
 
 header {
@@ -17,7 +16,7 @@ header {
 }
 
 nav {
-    background-color: #f4f4f4;
+    background-color: #fbfbfb;
     padding: 10px;
     text-align: center;
 }
@@ -33,6 +32,11 @@ nav button {
 }
 
 nav button:hover {
+    background-color: #6d1a74;
+    color: #fff;
+}
+
+#loginLogoutButton:hover {
     background-color: #6d1a74;
     color: #fff;
 }
@@ -75,16 +79,16 @@ footer {
 
 .welcome-section {
     text-align: center;
-    margin-bottom: 40px; 
+    margin-bottom: 40px;
 }
 
 .welcome-section h2 {
     font-size: 24px;
     color: #49124e;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
 
-.welcome-section p {
-    font-size: 18px;
-    color: #333;
-}
+    .welcome-section p {
+        font-size: 18px;
+        color: #333;
+    }
 }
